글자 크기 조정

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
-  <title>토월고등학교 급식</title> 
+  <title>토월고 급식</title> 
   <script>
     $(function(){
         $KEY = "376c66873c3845a485f42bc79baa29ce"
@@ -33,10 +33,10 @@
                 }
                 catch(e)
                 {
-                    $meal = "오늘은 쉬는 날/시험 기간입니다.";
+                    $meal = "오늘은 쉬는 날 입니다.";
                     $(".meal").append($meal);
                     $(".meal").css({
-                        "font-size" : "30px",
+                        "font-size" : "20px",
                         "font-family": "Orbit",
                         "font-weight": "900",
                         "font-style": "normal",
@@ -63,7 +63,7 @@
                     $break = "오늘은 석식을 제공하지 않습니다.";
                     $(".break").append($break);
                     $(".break").css({
-                        "font-size" : "30px",
+                        "font-size" : "20px",
                         "font-family": "Orbit",
                         "font-weight": "900",
                         "font-style": "normal",
@@ -108,7 +108,7 @@ html{
        @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Orbit&display=swap');
    
     .meal{
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
         margin: auto;
         padding: auto;
@@ -121,7 +121,7 @@ html{
     }
 
     .break{
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
         margin: auto;
         padding-bottom: 20px;
@@ -135,7 +135,7 @@ html{
     }
 
     .sub1{
-        font-size: 30px;
+        font-size: 25px;
         text-align: center;
         margin: auto;
         padding-top: 20px;
@@ -149,7 +149,7 @@ html{
     }
 
     .sub2{
-        font-size: 30px;
+        font-size: 25px;
         text-align: center;
         margin: auto;
         padding-top: 20px;
@@ -162,7 +162,7 @@ html{
     }
     .asdf{
         text-align: left;
-        font-size: 20px;
+        font-size: 15px;
         font-family: "Orbit", sans-serif;
         font-weight: 900;
         font-style: normal;
@@ -173,7 +173,7 @@ html{
  </head>   
  <body> 
   <h1 class="title">
-    <img src="https://i.imgur.com/VfyCCt0.png" width="75"> 토월고등학교 급식</토월고등학교></h1> 
+    <img src="https://i.imgur.com/VfyCCt0.png" width="75"> 토월고 급식</토월고></h1> 
   <h1 class="YMD"></h1> 
   <h1 class="sub1">
     중식</h1> 
