--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ html{
  </head>   
  <body> 
   <h1 class="title">
-    <img src="https://i.imgur.com/VfyCCt0.png" width="75"> 토월고 급식</토월고></h1> 
+    <img src="https://i.imgur.com/VfyCCt0.png" width="75"> 토월급식</토월고></h1> 
   <h1 class="YMD"></h1> 
   <h1 class="sub1">
     중식</h1> 
