--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ko"> 
+
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -167,6 +168,68 @@ html{
         font-weight: 900;
         font-style: normal;
 }
+</style>
+
+<style>
+
+.star-ratingmeal {
+  border:solid 1px #ccc;
+  display:flex;
+  flex-direction: row-reverse;
+  font-size:1.5em;
+  justify-content:space-around;
+  padding:0 .2em;
+  text-align:center;
+  width:5em;
+}
+
+.star-ratingmeal input {
+  display:none;
+}
+
+.star-ratingmeal label {
+  color:#ccc;
+  cursor:pointer;
+}
+
+.star-ratingmeal :checked ~ label {
+  color:#f90;
+}
+
+.star-ratingmeal label:hover,
+.star-ratingmeal label:hover ~ label {
+  color:#fc0;
+}
+
+.star-rating {
+  border:solid 1px #ccc;
+  display:flex;
+  flex-direction: row-reverse;
+  font-size:1.5em;
+  justify-content:space-around;
+  padding:0 .2em;
+  text-align:center;
+  width:5em;
+}
+
+.star-rating input {
+  display:none;
+}
+
+.star-rating label {
+  color:#ccc;
+  cursor:pointer;
+}
+
+.star-rating :checked ~ label {
+  color:#f90;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+  color:#fc0;
+}
+
 
 </style>
 
@@ -178,22 +241,32 @@ html{
   <h1 class="sub1">
     중식</h1> 
   <p class="meal"></p>
-  
-  <div class="star-ratings">
-	<div 
-    class="star-ratings-fill space-x-2 text-lg"
-    :style="{ width: ratingToPercent + '%' }"
-	>
-		<span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-	</div>
-	<div class="star-ratings-base space-x-2 text-lg">
-		<span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-	</div>
-</div>
-  
+
   <h1 class="sub2">
     석식</h1> 
   <p class="break"></p>
+
+  
+  <form action="rating" method="get">
+
+    <div class="star-ratingmeal">
+      <input type="radio" id="5-stars" name="rating" value="5" />
+      <label for="5-stars" class="star">&#9733;</label>
+      <input type="radio" id="4-stars" name="rating" value="4" />
+      <label for="4-stars" class="star">&#9733;</label>
+      <input type="radio" id="3-stars" name="rating" value="3" />
+      <label for="3-stars" class="star">&#9733;</label>
+      <input type="radio" id="2-stars" name="rating" value="2" />
+      <label for="2-stars" class="star">&#9733;</label>
+      <input type="radio" id="1-star" name="rating" value="1" />
+      <label for="1-star" class="star">&#9733;</label>
+     
+    </div>
+    <div class="button">
+      <input type='submit' value='전송'>
+      </div>
+    </form>
+    
   <p class="asdf">제작자 : nh / sh
  </body>
 </html>
