--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ html{
 </style>
 
 <style>
-  
+
 .star-rating {
   border:solid 1px #ccc;
   display:flex;
@@ -224,7 +224,7 @@ html{
   
   <form action="rating" method="get">
 
-    <div class="star-ratingmeal">
+    <div class="star-rating">
       <input type="radio" id="5-stars" name="rating" value="5" />
       <label for="5-stars" class="star">&#9733;</label>
       <input type="radio" id="4-stars" name="rating" value="4" />
