--- a/rating.html
+++ b/rating.html
@@ -181,11 +181,7 @@ html{
   padding:0 .2em;
   text-align:center;
   width:5em;
-}
-
-.star-rating input {
-  display:none;
-  text-align:center;
+  margin: auto;
 }
 
 .star-rating label {
@@ -221,27 +217,15 @@ html{
     석식</h1> 
   <p class="break"></p>
 
-  
-  <form action="rating" method="get">
+  <div class="star-rating">
+    <label for="5-stars" class="star">&#9733;</label>
+    <label for="4-stars" class="star">&#9733;</label>
+    <label for="3-stars" class="star">&#9733;</label>
+    <label for="2-stars" class="star">&#9733;</label>
+    <label for="1-star" class="star">&#9733;</label>
+   
+  </div>
 
-    <div class="star-rating">
-      <input type="radio" id="5-stars" name="rating" value="5" />
-      <label for="5-stars" class="star">&#9733;</label>
-      <input type="radio" id="4-stars" name="rating" value="4" />
-      <label for="4-stars" class="star">&#9733;</label>
-      <input type="radio" id="3-stars" name="rating" value="3" />
-      <label for="3-stars" class="star">&#9733;</label>
-      <input type="radio" id="2-stars" name="rating" value="2" />
-      <label for="2-stars" class="star">&#9733;</label>
-      <input type="radio" id="1-star" name="rating" value="1" />
-      <label for="1-star" class="star">&#9733;</label>
-     
-    </div>
-    <div class="button">
-      <input type='submit' value='전송'>
-      </div>
-    </form>
-    
   <p class="asdf">제작자 : nh / sh
  </body>
 </html>
