--- a/rating.html
+++ b/rating.html
@@ -171,7 +171,7 @@ html{
 </style>
 
 <script>
-  $star = request.getParameter("star-rating");
+  $star = request.getParameter("rating");
   $1star = "&#9733";
   $2star = "&#9733";
   $3star = "&#9733";
