--- a/rating.html
+++ b/rating.html
@@ -172,11 +172,11 @@ html{
 
 <script>
   $star = request.getParameter("rating");
-  if($star>0){$(".star5").append('&#9733');}
-  if($star>1){$(".star4").append('&#9733');} 
-  if($star>2){$(".star3").append('&#9733');} 
-  if($star>3){$(".star2").append('&#9733');} 
-  if($star>4){$(".star1").append('&#9733');} 
+  if($star > 0 ){$("star5").append("&#9733")}
+  if($star > 1){$("star4").append("&#9733")} 
+  if($star > 2){$("star3").append("&#9733")} 
+  if($star > 3){$("star2").append("&#9733")} 
+  if($star > 4){$("star1").append("&#9733")} 
 </script>
       
 <style>
@@ -246,11 +246,11 @@ html{
     석식</h1> 
   <p class="break"></p>
   <div class="star-rating">
-       <span class="star1"></span>
-       <span class="star2"></span> 
-       <span class="star3"></span> 
-       <span class="star4"></span> 
-       <span class="star5"></span>
+       <span id="star1" class="star1"></span>
+       <span id="star2" class="star2"></span> 
+       <span id="star3" class="star3"></span> 
+       <span id="star4" class="star4"></span> 
+       <span id="star5" class="star5"></span>
   </div>
   <p class="asdf">제작자 : nh / sh
  </body>
