--- a/rating.html
+++ b/rating.html
@@ -254,8 +254,7 @@ html{
 </script>
 </div>
 
-<p class=average>평균 평점: <span id="ratings"></span></p>
-<p class=average id="averageRating"></p>
+<p><span id="averageRating"></span></p>
 
   <p class="asdf">제작자 : nh / sh
  </body>
