--- a/rating.html
+++ b/rating.html
@@ -254,7 +254,7 @@ html{
 </script>
 </div>
 
-<p><span id="averageRating"></span></p>
+<p id="averageRating"></p>
 
   <p class="asdf">제작자 : nh / sh
  </body>
