--- a/rating.html
+++ b/rating.html
@@ -224,7 +224,7 @@ html{
     }
   </style>
 
-   <script src="average.js" defer></script>
+<script src="http://towol.n-e.kr/average.js" defer></script>
 
  </head>   
  <body> 
