--- a/rating.html
+++ b/rating.html
@@ -254,7 +254,7 @@ html{
 </script>
 </div>
 
-<p id="averageRating"></p>
+<h2 id="averageRating"></h2>
 
   <p class="asdf">제작자 : nh / sh
  </body>
