--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@ html{
 
  </head>   
  <body> 
+    <script type="module" src="src/script.js"></script>
+    <script src="./src/js/script.js" type="module"></script>
+
   <h1 class="title">
     <img src="https://i.imgur.com/VfyCCt0.png" width="75"> 토월급식</토월고></h1> 
   <h1 class="YMD"></h1> 
