--- a/rating.html
+++ b/rating.html
@@ -270,7 +270,7 @@ resetCookieAtMidnight();
 
 // 서버로 데이터를 전송하는 함수
 function sendDataToServer(data) {
-  fetch('/addRating', {
+  fetch('script.js', {
     method: 'POST',
     headers: {
         'Content-Type': 'application/json'
