--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@ html{
  <body> 
     <script type="module" src="src/script.js"></script>
     <script src="./src/js/script.js" type="module"></script>
+    <script src="./dist/script.js"></script>
 
   <h1 class="title">
     <img src="https://i.imgur.com/VfyCCt0.png" width="75"> 토월급식</토월고></h1> 
