--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ html{
     
     <div class="container">
         <div class="button">
-          <input type='submit' value='전송'>
+          <input type='submit' value='평가'>
         </div>
     </div>
   </form>
