--- a/rating.html
+++ b/rating.html
@@ -218,15 +218,30 @@ html{
   <p class="break"></p>
   <div class="star-rating">
     <script>
-      // 쿠키에서 rating 값을 가져와서 별점으로 표시
-      const rating = getCookie('rating');
-      let stars = '';
-      for (let i = 0; i < rating; i++) {
-          stars += '&#9733;'; // 별 이모티콘
-      }
-      document.querySelector(".star-rating").innerHTML = `${stars}`;
-  
-     </script>
+        // 쿠키에서 rating 값을 가져와서 별점으로 표시
+        const rating = parseInt(getCookie('rating'));
+        let stars = '';
+        for (let i = 0; i < rating; i++) {
+            stars += '&#9733;'; // 별 이모티콘
+        }
+        document.querySelector(".star-rating").innerHTML = `${stars}`;
+    
+        function getCookie(cname) {
+            var name = cname + "=";
+            var decodedCookie = decodeURIComponent(document.cookie);
+            var ca = decodedCookie.split(';');
+            for(var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(name) == 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+      </script>
      </div>
 
   <p class="asdf">제작자 : nh / sh
