--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ html{
     <script src="./dist/script.js"></script>
 
   <h1 class="title">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fkr.freepik.com%2Fpremium-vector%2Frice-bowl-japanese-food-illustration-vector-clipart_33719272.htm&psig=AOvVaw2JU8ls9ONCkGDSJgPFZHyE&ust=1709609166876000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMC7w8rU2YQDFQAAAAAdAAAAABAE" width="75"> 토월급식</토월고></h1> 
+    <img src="https://i.ibb.co/QQNsDbQ/4474821.png" width="75"> 토월급식</토월고></h1> 
   <h1 class="YMD"></h1> 
   <h1 class="sub1">
     중식</h1> 
