--- a/rating.html
+++ b/rating.html
@@ -224,21 +224,32 @@ xhr.send(params);
 </script>
 
 <script>
-    // 데이터를 가져와서 표시할 요소를 선택합니다
-    const ratingList = document.getElementById('ratingList');
-    
-    // 데이터를 가져오는 함수
-    fetch('addRating.php')
-        .then(response => response.json())
-        .then(data => {
-            // 데이터를 받아와서 리스트 아이템으로 추가합니다
-            data.forEach(item => {
-                const li = document.createElement('li');
-                li.textContent = item.value;
-                ratingList.appendChild(li);
-            });
-        })
-        .catch(error => console.error('데이터를 가져오는 중 오류가 발생했습니다:', error));
+ const ratingList = document.getElementById('ratingList');
+const statDisplay = document.getElementById('statDisplay');
+
+// 데이터를 가져오는 함수
+fetch('addRating.php')
+    .then(response => response.json())
+    .then(data => {
+        // 데이터를 받아와서 리스트 아이템으로 추가합니다
+        data.forEach(item => {
+            const li = document.createElement('li');
+            li.textContent = item.value;
+            ratingList.appendChild(li);
+        });
+
+        // 통계 계산
+        const values = data.map(item => item.value);
+        const sum = values.reduce((acc, curr) => acc + curr, 0);
+        const average = sum / values.length;
+
+        // 통계를 HTML에 표시
+        statDisplay.innerHTML = `
+            <p>총합: ${sum}</p>
+            <p>평균: ${average.toFixed(2)}</p>
+        `;
+    })
+    .catch(error => console.error('데이터를 가져오는 중 오류가 발생했습니다:', error));
     </script>
 
  </head>  
