급식 총 평점

--- a/rating.html
+++ b/rating.html
@@ -293,7 +293,7 @@ fetch('addRating.php')
       </script>
      </div>
 
-     <ul id="ratingList"></ul>
+     <ul id="statDisplay"></ul>
 
   <p class="asdf">제작자 : nh / sh
  </body>
