--- a/rating.html
+++ b/rating.html
@@ -201,6 +201,17 @@ html{
     }
   </style>
 
+// 페이지 로드 시 rating 값 확인하여 index.html로 이동
+    window.onload = function() {
+      var rating = document.cookie.replace(/(?:(?:^|.*;\s*)rating\s*=\s*([^;]*).*$)|^.*$/, "$1");
+      if (rating !== "") {
+        window.location.href = 'rindexhtml'; // index.html 페이지로 이동
+      }
+    };
+ </script>
+
+
+  
 <script>
 
 var ratingValue = document.getElementById("ratingForm").value;
