--- a/rating.html
+++ b/rating.html
@@ -220,7 +220,8 @@ var xhr = new XMLHttpRequest();
 var url = "addRating.php";
 var params = "rating=" + ratingValue;
 xhr.open("POST", url, true);
-
+</script>
+  
 // 헤더 설정
 xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 
