--- a/rating.html
+++ b/rating.html
@@ -201,6 +201,8 @@ html{
     }
   </style>
 
+
+<script>
 // 페이지 로드 시 rating 값 확인하여 index.html로 이동
     window.onload = function() {
       var rating = document.cookie.replace(/(?:(?:^|.*;\s*)rating\s*=\s*([^;]*).*$)|^.*$/, "$1");
