--- a/rating.html
+++ b/rating.html
@@ -223,7 +223,8 @@ var url = "addRating.php";
 var params = "rating=" + ratingValue;
 xhr.open("POST", url, true);
 </script>
-  
+
+<script>
 // 헤더 설정
 xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 
