--- a/rating.html
+++ b/rating.html
@@ -207,7 +207,7 @@ html{
     window.onload = function() {
       var rating = document.cookie.replace(/(?:(?:^|.*;\s*)rating\s*=\s*([^;]*).*$)|^.*$/, "$1");
       if (rating !== "") {
-        window.location.href = 'rindexhtml'; // index.html 페이지로 이동
+        window.location.href = 'index.html'; // index.html 페이지로 이동
       }
     };
  </script>
