--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ html{
     <script src="./dist/script.js"></script>
 
   <h1 class="title">
-    <img src="https://i.ibb.co/QQNsDbQ/4474821.png" width="75"> 토월급식</토월고></h1> 
+   토월급식</토월고></h1> 
   <h1 class="YMD"></h1> 
   <h1 class="sub1">
     중식</h1> 
