--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ html{
  </head>   
  <body>
   <h1 class="title">
-   토월급식</토월고></h1> 
+  <img src=Bob.png alt=밥 witth=50 hight=50> 토월급식</토월고></h1> 
   <h1 class="YMD"></h1> 
   <h1 class="sub1">
     중식</h1> 
