--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
             font-style: chrome;
             font-size: 30px;
         }
+
+        .Bob
+        {
+            text-align: center;
+        }
     </style>
 
     <style>
@@ -243,7 +248,7 @@
 </head>
 
 <body>
-    <img src=Bob.png alt=밥 weight=75 height=75>
+    <img class="Bob" src=Bob.png alt=밥 weight=75 height=75>
     <h1 class="title">
         토월급식</토월고>
     </h1>
