--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
             font-size: 30px;
         }
 
-        .Bob
-        {
+        .Bob {
             text-align: center;
         }
     </style>
