--- a/index.html
+++ b/index.html
@@ -247,9 +247,8 @@
 </head>
 
 <body>
-    <img class="Bob" src=Bob.png alt=밥 weight=75 height=75>
     <h1 class="title">
-        토월급식</토월고>
+     <img src=Bob.png alt="rice" weight=75 height=75 text-align=center> 토월급식</토월고>
     </h1>
     <h1 class="YMD"></h1>
     <h1 class="sub1">
