--- a/index.html
+++ b/index.html
@@ -242,8 +242,15 @@
             cursor: pointer;
         }
     </style>
+    
 <meta name="description" content="토월고 급식 정보 사이트">
 
+<meta property="og:type" content="website"> 
+<meta property="og:title" content="토월고 급식">
+<meta property="og:description" content="토월고 급식 정보 사이트">
+<meta property="og:image" content="Bob.png">
+<meta property="og:url" content="https://towol.n-e.kr"
+    
 </head>
 
 <body>
