--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>토월고 급식</title>
+    <title>토월고등학교 급식</title>
+    <link rel="canonical" href="towol.n-e.kr">
     <script>
         $(function () {
             $KEY = "376c66873c3845a485f42bc79baa29ce"
@@ -218,9 +219,7 @@
             margin: 10px 0;
             border-radius: 50px;
             background-color: #add8e6;
-            /* 여기에서 background-color 값을 연한 하늘색(light blue)으로 변경 */
             color: #000;
-            /* 여기에서 color 값을 검은색(black)으로 변경 */
             font-family: "Noto Sans KR", sans-serif;
             font-size: 20px;
             font-weight: bold;
@@ -231,7 +230,6 @@
 
         .button:hover {
             background-color: #87ceeb;
-            /* 여기에서 background-color 값을 연한 하늘색(light blue)으로 변경 */
         }
 
         .button input[type="submit"] {
@@ -242,32 +240,26 @@
             cursor: pointer;
         }
     </style>
-    
-<meta name="description" content="토월고 급식 정보 사이트">
 
-<meta property="og:type" content="website"> 
-<meta property="og:title" content="토월고 급식">
-<meta property="og:description" content="토월고 급식 정보 사이트">
-<meta property="og:image" content="Bob.png">
-<meta property="og:url" content="https://towol.n-e.kr"
-    
+    <meta name="description" content="토월고 급식 정보 사이트">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="토월고등학교 급식">
+    <meta property="og:description" content="토월고 급식 정보 사이트">
+    <meta property="og:image" content="Bob.png">
+    <meta property="og:url" content="towol.n-e.kr">
 </head>
 
 <body>
     <h1 class="title">
-     <img src=Bob.png alt="rice" weight=75 height=75 text-align=center> 토월급식</토월고>
+        <img src=Bob.png alt="rice" weight=75 height=75 text-align=center> 토월급식</토월고>
     </h1>
     <h1 class="YMD"></h1>
     <h1 class="sub1">
         중식</h1>
     <p class="meal"></p>
-
     <h1 class="sub2">
         석식</h1>
     <p class="break"></p>
-
-
-
     <p class="asdf">제작자 : nh / sh
 </body>
 
